k8s/dev/apps/kuard/manifests/kuard-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuard

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
  labels:
    run: kuard
spec:
  selector:
    matchLabels:
      run: kuard
  replicas: 1
  template:
    metadata:
      labels:
        run: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:blue
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
spec:
  selector:
    run: kuard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
